[gd_scene load_steps=6 format=3 uid="uid://dv4b1b5nnjdle"]

[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="1_84tb0"]
[ext_resource type="Texture2D" uid="uid://b54yvj6y2n0bl" path="res://Textures/ouija_azul-removebg-preview.png" id="2_e2j0v"]
[ext_resource type="Texture2D" uid="uid://j8lpx1wmbl3q" path="res://Textures/ouija_roja-removebg-preview.png" id="3_3yidc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gi1lc"]
size = Vector2(401.385, 301.339)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svtft"]
size = Vector2(392.441, 306.818)

[node name="EventManager" type="Node2D"]
script = ExtResource("1_84tb0")

[node name="ouija_blue" type="Sprite2D" parent="."]
visible = false
position = Vector2(566.667, 314)
scale = Vector2(0.112112, 0.149333)
texture = ExtResource("2_e2j0v")

[node name="Area2DBlue" type="Area2D" parent="ouija_blue"]
collision_layer = 2

[node name="CollisionShape2DBlue" type="CollisionShape2D" parent="ouija_blue/Area2DBlue"]
position = Vector2(-19.3257, -10.0444)
shape = SubResource("RectangleShape2D_gi1lc")

[node name="ouija_red" type="Sprite2D" parent="."]
visible = false
position = Vector2(566.448, 313.5)
scale = Vector2(0.114667, 0.146667)
texture = ExtResource("3_3yidc")

[node name="Area2DRed" type="Area2D" parent="ouija_red"]
collision_layer = 2

[node name="CollisionShape2DRed" type="CollisionShape2D" parent="ouija_red/Area2DRed"]
position = Vector2(-16.9893, -6.81738)
shape = SubResource("RectangleShape2D_svtft")

[connection signal="area_entered" from="ouija_blue/Area2DBlue" to="." method="_on_area_2d_blue_area_entered"]
[connection signal="area_entered" from="ouija_red/Area2DRed" to="." method="_on_area_2d_red_area_entered"]
